--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <link rel="stylesheet" href="style.css">
     <script src="p5.js"></script>
     <script src="p5.dom.js"></script>
     <script src="p5.sound.js"></script>
     <script src="sketch.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   </head>
   <body>
+    <div id="main">
+      
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn" id="b1">Sounds</button>
+        <button onclick="helpFunction()" class="dropbtn" id="b2">Help</button>
+        <div id="myDropdown2" class="dropdown-content2">
+            <p>Click each Lily Pad to play a note, or use the A, S, D, F keys for the top row and the Z, X, C, V keys for the bottom row.</heavy></p>
+          </div>
+        <div id="myDropdown" class="dropdown-content">
+          <a onclick="bankFunction(0)" href="#">Bank 1</a>
+          <a onclick="bankFunction(1)" href="#">Bank 2</a>
+          <a onclick="bankFunction(2)" href="#">Bank 3</a>
+        </div>
+      </div>
+      <div id="sketch-holder"></div>
+    </div>
   </body>
 </html>
