--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <a onclick="bankFunction(0)" href="#">Bank 1</a>
           <a onclick="bankFunction(1)" href="#">Bank 2</a>
           <a onclick="bankFunction(2)" href="#">Bank 3</a>
+          <a onclick="bankFunction(3)" href="#">Bank 4</a>
+          <a onclick="bankFunction(4)" href="#">Bank 5</a>
         </div>
       </div>
       <div id="sketch-holder"></div>
