--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div id="main">
-      
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn" id="b1">Sounds</button>
         <button onclick="helpFunction()" class="dropbtn" id="b2">Help</button>
@@ -28,6 +27,7 @@
           <a onclick="bankFunction(4)" href="#">Bank 5</a>
         </div>
       </div>
+      <div id="p5_loading">Loading Sound Files...</div>
       <div id="sketch-holder"></div>
     </div>
   </body>
